--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
     "express": "^4.12.4",
     "mongoose": "^4.7.1",
