--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.15.2",
+    "dotenv": "^4.0.0",
     "express": "^4.12.4",
     "mongoose": "^4.7.1",
-    "morgan": "^1.7.0"
+    "morgan": "^1.7.0",
+    "nodemon": "^1.11.0"
   },
   "keywords": [
     "node",
