--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.12.4",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-http": "^0.3.0"
   },
   "keywords": [
     "node",
